Add pause / resume and draw path button
now i only draw if the gameStatus is true which is being trigger by the
pause / resume button. add new class for mobs
and logic for mob to follow the path. still some bug to fix right now
the canvas won't appear for some reasons ...

--- a/Tower-Defense/index.html
+++ b/Tower-Defense/index.html
@@ -127,6 +127,13 @@
 						</ul>
 						<div class="towerIcon" id="purple"></div>
 					</div>
+					<div class="list-group-item startPausePath">
+						<button id="startPause" class="btn btn-default">Pasue / resume</button>
+						<br />
+						<button id="nextRound" class="btn btn-default"></button>
+						<br />
+						<button id="path" class="btn btn-default">Add Path</button>
+					</div>
 				</div>
 			  </div>
 			</div>
