--- a/Tower-Defense/index.html
+++ b/Tower-Defense/index.html
@@ -80,6 +80,10 @@
 		.activeTower{
 			background-color: rgba(0,0,0,0.5);
 		}
+		.buttonMenu{
+			width: 100%;
+			margin-bottom: 10px;
+		}
 		
 	
 	
@@ -128,11 +132,11 @@
 						<div class="towerIcon" id="purple"></div>
 					</div>
 					<div class="list-group-item startPausePath">
-						<button id="startPause" class="btn btn-default">Pasue / resume</button>
+						<button id="startPause" class="btn btn-default buttonMenu">Pasue / resume</button>
 						<br />
-						<button id="nextRound" class="btn btn-default"></button>
+						<button id="nextRound" class="btn btn-default buttonMenu"></button>
 						<br />
-						<button id="path" class="btn btn-default">Add Path</button>
+						<button id="path" class="btn btn-default buttonMenu">Add Path</button>
 					</div>
 				</div>
 			  </div>
