--- a/index.html
+++ b/index.html
@@ -1,78 +1,154 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Francisgroleau2.github.io by FrancisGroleau</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+﻿<html>
+<head>
+	<title>Tower Defense</title>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+	<script src="Script/librairie.js" type="text/javascript"></script>
+	<script src="Script/menu.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="Styles/bootstrap.css">
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/FrancisGroleau/towerDefense">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/FrancisGroleau/towerDefense/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/FrancisGroleau/towerDefense/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
-    <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <h1>Francisgroleau2.github.io</h1>
-          <p>Personal website</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/FrancisGroleau">FrancisGroleau</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+	
+	<style>
+		
+		#container{
+			border 2px solid blue;
+			margin: auto;
+			width: 70%;
+			height: 100%;
+			float: left;
+			margin-left : 80px;
+		}
+		
+		#menu{
+			width: 20%;
+			height: 800px;
+			float: left;
+			border : 1px solid black;
+		}
+		.tower:nth-of-type(1)
+		{
+			margin-top: 5px;
+		
+		
+		}
+		
+		.tower{
+			padding: 5px;
+			margin-bottom: 5px;
+			margin-left: 5px;
+			margin-right: 5px;
+			border: 1px solid black;
+			border-radius: 5px;
+		}
+		
+		.green-tower{
+			background-color : #00bc8c;
+			color: black;
+		}
+		
+		.red-tower{
+			background-color : #e74c3c;
+			color: black;
+		}
+		.purple-tower{
+			background-color : #AF85C9;
+			color: black
+		}
+		
+		green-tower, .red-tower, .purple-tower{
+			position: relative;
+			
+		}
+		
+		.towerTitle, .subTitleTower{
+				text-shadow: 2px 2px  5px black;		
+		}
+		.towerIcon{
+		
+			border: 1px solid black;
+			background-color: rgba(0,0,0,0.2);
+			width: 35px;
+			height: 35px;
+			position: absolute;
+			right: 30px;
+			top: 100px;
+		}
+		
+		.towerIcon:not(.activeTower):hover {  
+			background-color: rgba(0,0,0,0.3);
+		}
+		
+		.activeTower{
+			background-color: rgba(0,0,0,0.5);
+		}
+		.buttonMenu{
+			width: 100%;
+			margin-bottom: 10px;
+		}
+		
+	
+	
+	</style>
+</head>
+<body>
+	<h1>Tower Defense</h1>
+	
+	<div id="main">
+	
+		<aside id="Menu">
+			<div class="panel panel-primary tower">
+			  <div class="panel-heading">
+				<h2 class="panel-title towerTitle">Towers</h2>
+			  </div>
+			  <div class="panel-body">
+				<div class="list-group">
+					<div class="list-group-item green-tower">
+						<h4 class="list-group-item-heading subTitleTower">Green Tower</h4>
+						<p class="list-group-item-text">The green tower is a weak tower. It has a rapide rate of fire but does not inflict a lot of damage.</p>
+						<ul>
+							<li>Damage : 10 </li>
+							<li>Rate of fire: 0.10 seconde</li>
+							<li>Rage : 3 </li>
+						</ul>
+						<div class="towerIcon" id="green"></div>
+					</div>
+					<div class="list-group-item red-tower">
+						<h4 class="list-group-item-heading subTitleTower">Red Tower</h4>
+						<p class="list-group-item-text">The red tower is a missle tower. It it's hard but has a slow rate of fire.</p>
+						<ul>
+							<li>Damage : 50 </li>
+							<li>Rate of fire: 2 seconde</li>
+							<li>Rage : 5 </li>
+						</ul>
+						<div class="towerIcon" id="red"></div>
+					</div>
+					<div class="list-group-item purple-tower">
+						<h4 class="list-group-item-heading subTitleTower">Purple Tower</h4>
+						<p class="list-group-item-text">The purple tower is meant to reduce mobs speed, it does not inflict damage.</p>
+						<ul>
+							<li>Damage : 0 </li>
+							<li>Rate of fire: 0.5 seconde</li>
+							<li>Rage : 3 </li>
+						</ul>
+						<div class="towerIcon" id="purple"></div>
+					</div>
+					<div class="list-group-item startPausePath">
+						<button id="startPause" class="btn btn-default buttonMenu">Pasue / resume</button>
+						<br />
+						<button id="nextRound" class="btn btn-default buttonMenu"></button>
+						<br />
+						<button id="path" class="btn btn-default buttonMenu">Add Path</button>
+					</div>
+				</div>
+			  </div>
+			</div>
+		</aside>
+		
+		<div id="container">
+			<canvas id="canvas">
+			</canvas>
+		</div>
+		
+		
+	</div>
+</body>
 </html>
