--- a/Tower-Defense/index.html
+++ b/Tower-Defense/index.html
@@ -113,7 +113,7 @@
 					</div>
 					<div class="list-group-item red-tower">
 						<h4 class="list-group-item-heading subTitleTower">Red Tower</h4>
-						<p class="list-group-item-text">The red tower is a missle tower. It it's hard but has a slow rate of fire.</p>
+						<p class="list-group-item-text">The red tower is a missle tower. It inflict a lot of damage but has a slow rate of fire.</p>
 						<ul>
 							<li>Damage : 50 </li>
 							<li>Rate of fire: 2 seconde</li>
