--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
 			margin-bottom: 10px;
 		}
 		
+		#numberOfPath{
+			color: white;
+		}
+		
 	
 	
 	</style>
@@ -136,7 +140,7 @@
 						<br />
 						<button id="nextRound" class="btn btn-default buttonMenu"></button>
 						<br />
-						<button id="path" class="btn btn-default buttonMenu">Add Path</button>
+						<button id="path" class="btn btn-default buttonMenu">Confirm Path</button>
 					</div>
 				</div>
 			  </div>
@@ -144,6 +148,10 @@
 		</aside>
 		
 		<div id="container">
+			<div id="playerStats">
+				<div id="numberOfPath"></div>
+				<div id="money"></div>
+			</div>
 			<canvas id="canvas">
 			</canvas>
 		</div>
