--- a/index.html
+++ b/index.html
@@ -139,8 +139,6 @@
 						<button id="startPause" class="btn btn-default buttonMenu">Pasue / resume</button>
 						<br />
 						<button id="nextRound" class="btn btn-default buttonMenu"></button>
-						<br />
-						<button id="path" class="btn btn-default buttonMenu">Confirm Path</button>
 					</div>
 				</div>
 			  </div>
@@ -149,7 +147,7 @@
 		
 		<div id="container">
 			<div id="playerStats">
-				<div id="numberOfPath"></div>
+				<div id="life"></div>
 				<div id="money"></div>
 			</div>
 			<canvas id="canvas">
