--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<ul>
 							<li>Damage : 10 </li>
 							<li>Rate of fire: 0.10 seconde</li>
-							<li>Rage : 3 </li>
+							<li>Range : 3 </li>
 						</ul>
 						<div class="towerIcon" id="green"></div>
 					</div>
@@ -121,7 +121,7 @@
 						<ul>
 							<li>Damage : 50 </li>
 							<li>Rate of fire: 2 seconde</li>
-							<li>Rage : 5 </li>
+							<li>Range : 5 </li>
 						</ul>
 						<div class="towerIcon" id="red"></div>
 					</div>
@@ -131,12 +131,12 @@
 						<ul>
 							<li>Damage : 0 </li>
 							<li>Rate of fire: 0.5 seconde</li>
-							<li>Rage : 3 </li>
+							<li>Range : 3 </li>
 						</ul>
 						<div class="towerIcon" id="purple"></div>
 					</div>
 					<div class="list-group-item startPausePath">
-						<button id="startPause" class="btn btn-default buttonMenu">Pasue / resume</button>
+						<button id="startPause" class="btn btn-default buttonMenu">Pause / resume</button>
 						<br />
 						<button id="nextRound" class="btn btn-default buttonMenu"></button>
 					</div>
