--- a/Tower-Defense/index.html
+++ b/Tower-Defense/index.html
@@ -111,7 +111,7 @@
 						<ul>
 							<li>Damage : 10 </li>
 							<li>Rate of fire: 0.10 seconde</li>
-							<li>Rage : 3 </li>
+							<li>Range : 3 </li>
 						</ul>
 						<div class="towerIcon" id="green"></div>
 					</div>
@@ -121,7 +121,7 @@
 						<ul>
 							<li>Damage : 50 </li>
 							<li>Rate of fire: 2 seconde</li>
-							<li>Rage : 5 </li>
+							<li>Range : 5 </li>
 						</ul>
 						<div class="towerIcon" id="red"></div>
 					</div>
@@ -131,16 +131,14 @@
 						<ul>
 							<li>Damage : 0 </li>
 							<li>Rate of fire: 0.5 seconde</li>
-							<li>Rage : 3 </li>
+							<li>Range : 3 </li>
 						</ul>
 						<div class="towerIcon" id="purple"></div>
 					</div>
 					<div class="list-group-item startPausePath">
-						<button id="startPause" class="btn btn-default buttonMenu">Pasue / resume</button>
+						<button id="startPause" class="btn btn-default buttonMenu">Pause / resume</button>
 						<br />
 						<button id="nextRound" class="btn btn-default buttonMenu"></button>
-						<br />
-						<button id="path" class="btn btn-default buttonMenu">Confirm Path</button>
 					</div>
 				</div>
 			  </div>
@@ -149,7 +147,7 @@
 		
 		<div id="container">
 			<div id="playerStats">
-				<div id="numberOfPath"></div>
+				<div id="life"></div>
 				<div id="money"></div>
 			</div>
 			<canvas id="canvas">
