enough for tonight
stuff and things.. mostly level algo and speed of mobs and UI

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 			margin-bottom: 10px;
 		}
 		
-		#numberOfPath{
+
+		#mobLeft,#life{
 			color: white;
 		}
-		
 	
 	
 	</style>
@@ -148,6 +148,7 @@
 		<div id="container">
 			<div id="playerStats">
 				<div id="life"></div>
+				<div id="mobLeft"></div>
 				<div id="money"></div>
 			</div>
 			<canvas id="canvas">
